fix(player): Fixed draggable item on mobile on mcourser re #8218

--- a/src/main/java/com/lorepo/icplayer/public/theme/player.css
+++ b/src/main/java/com/lorepo/icplayer/public/theme/player.css
@@ -348,6 +348,7 @@ hr, table, fieldset {
 
 .ui-draggable {
 	-ms-touch-action: none;
+	touch-action: none;
 }
 
 .ic_draggableGapEmpty-wrong{
